models/wilor_hands/SLURM_logs/wilor-inference_023.out
Loaded modules:

Currently Loaded Modules:
  1) slurm/current    3) gcc/11.3.0   5) cuda/11.7
  2) DefaultModules   4) 2024r1

 

Tue Feb 17 17:20:28 2026       
+-----------------------------------------------------------------------------------------+
| NVIDIA-SMI 580.105.08             Driver Version: 580.105.08     CUDA Version: 13.0     |
+-----------------------------------------+------------------------+----------------------+
| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |
| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |
|                                         |                        |               MIG M. |
|=========================================+========================+======================|
|   0  NVIDIA A100 80GB PCIe          On  |   00000000:16:00.0 Off |                   On |
| N/A   61C    P0            140W /  300W |    1866MiB /  81920MiB |     N/A      Default |
|                                         |                        |              Enabled |
+-----------------------------------------+------------------------+----------------------+

+-----------------------------------------------------------------------------------------+
| MIG devices:                                                                            |
+------------------+----------------------------------+-----------+-----------------------+
| GPU  GI  CI  MIG |              Shared Memory-Usage |        Vol|        Shared         |
|      ID  ID  Dev |                Shared BAR1-Usage | SM     Unc| CE ENC  DEC  OFA  JPG |
|                  |                                  |        ECC|                       |
|==================+==================================+===========+=======================|
|  0    9   0   0  |              36MiB /  9728MiB    | 14      0 |  1   0    0    0    0 |
|                  |               0MiB /  6135MiB    |           |                       |
+------------------+----------------------------------+-----------+-----------------------+

+-----------------------------------------------------------------------------------------+
| Processes:                                                                              |
|  GPU   GI   CI              PID   Type   Process name                        GPU Memory |
|        ID   ID                                                               Usage      |
|=========================================================================================|
|  No running processes found                                                             |
+-----------------------------------------------------------------------------------------+
================ SLURM JOB INFO ================
Job ID:         9198118
Job Name:       wilor-inference
Partition:      gpu-a100-small
Node List:      gpu020
CPUs per task:  2
Memory per CPU: 
GPUs per task:  1
Memory per GPU: 10240
Submit dir:     /scratch/mthakur/manifold/models/wilor_hands
Work dir:       /scratch/mthakur/manifold/models/wilor_hands
Job started at: Tue Feb 17 17:20:29 CET 2026
===============================================
/.venv/lib/python3.10/site-packages/timm/models/layers/__init__.py:49: FutureWarning: Importing from timm.models.layers is deprecated, please import via timm.layers
  warnings.warn(f"Importing from {__name__} is deprecated, please import via timm.layers", FutureWarning)
Traceback (most recent call last):
  File "/scratch/mthakur/manifold/models/wilor_hands/main.py", line 8, in <module>
    from inference import *
  File "/scratch/mthakur/manifold/models/wilor_hands/inference.py", line 9, in <module>
    from utils_new import *
  File "/scratch/mthakur/manifold/models/wilor_hands/utils_new.py", line 62
    cameras = PerspectiveCameras(
                                ^
SyntaxError: '(' was never closed
srun: error: gpu020: task 0: Exited with exit code 1
srun: launch/slurm: _step_signal: Terminating StepId=9198118.0
===============================================
Job finished at: Tue Feb 17 17:20:43 CET 2026
Execution took 0.00 hours
Writing output to SLURM_logs/wilor-inference_023.out
===============================================
